--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 Django==1.10.3
 django-forms-bootstrap==3.0.1
+django-uuslug==1.1.8
 olefile==0.44
 Pillow==4.1.1
+python-slugify==1.2.4
+Unidecode==0.4.21
